Align responsive lastpost desc on title text. Fixes #106

--- a/theme/bootstrapextend.css
+++ b/theme/bootstrapextend.css
@@ -860,6 +860,7 @@ div.error {
     margin-left: 45px;
     margin-top: 0px;
     padding-top: 0px;
+    padding-left: 0px;
     
     border-top: 1px dashed #ccc;        
   }   
